fixed issue with flexbox wrapping in bigger tablets

--- a/mobile_and_tablets.css
+++ b/mobile_and_tablets.css
@@ -1499,7 +1499,7 @@ body>div>section.about-us>div.online-shop>p {
     .about-us .authenticity .text,
     .about-us .local-store .text,
     .about-us .online-shop .text {
-        width: 34vh;
+        width: 25vh;
         height: 25vh;
         border-radius: 3%;
         margin: 30px;
@@ -1685,9 +1685,12 @@ body>div>section.about-us>div.online-shop>p {
         font-size: 6rem;
     }
 
+    .about-us .online-shop .auction h2 i {
+        font-size: 4rem;
+    }
 
 
 
 }
 
-/* TABLETS portrait large ones like (iPad Pro, iPad Air) */
+/* TABLETS landscape
